--- a/wp-content/themes/basic-theme/css/style.css
+++ b/wp-content/themes/basic-theme/css/style.css
@@ -23,7 +23,7 @@ body {
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
     flex-direction: column;
-    font-family: "Cera", sans-serif;
+    font-family: "Montserrat", sans-serif;
     font-weight: 400;
     font-size: 18px;
     color: #000;
@@ -1269,7 +1269,7 @@ transition: all .5s ease-in-out;
 .entry-post__inner__head span{
     font-size:18px;
     text-decoration: underline;
-    font-family: 'Cera', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     display:block;
     color: #fff;
     margin:0 auto;
@@ -1332,7 +1332,7 @@ transition: all .5s ease-in-out;
     /*text-transform: uppercase; */
     text-align: center;
     font-weight: 300;
-    font-family: 'Cera';
+    font-family: 'Montserrat';
     color: #fff;
     /* letter-spacing: 3px; */
     font-size: 20px;
@@ -1353,7 +1353,7 @@ transition: all .5s ease-in-out;
 .entry-post__inner__head .button {
     background: transparent;
     border: none;
-    font-family: 'Cera';
+    font-family: 'Montserrat';
     color: #fff;
     padding: 0;
     margin-top: 40px;
@@ -1706,7 +1706,7 @@ transition: all .3s ease-in-out;
 .entry-post__books__item h3 {
     position: relative;
     font-size: 18px;
-    font-family: 'Cera', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     line-height: 120%;
     letter-spacing: 0;
     text-align: center;
