--- a/wp-content/themes/basic-theme/css/style.css
+++ b/wp-content/themes/basic-theme/css/style.css
@@ -177,6 +177,10 @@ section.site-page {
     padding-bottom: 7%;
 }
 
+body.page-template-default.page {
+    background: var(--dark-green);
+}
+
 .site-page__content {
     padding: 40px 0;
 }
