--- a/wp-content/themes/basic-theme/css/style-hero2.css
+++ b/wp-content/themes/basic-theme/css/style-hero2.css
@@ -31,6 +31,7 @@
     display: block;
     position: absolute;
     bottom: 0;
+    opacity: 0.7;
     background: url(../images/bg2.svg) no-repeat;
     background-position: bottom;
     background-size: cover;
